[package]
name = "onjbot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["framework", "client", "gateway", "rustls_backend", "model", "cache"] }
dotenvy = "0.15"
once_cell = "1.19"
rss = "2"
rand = "0.8"
rand_chacha = "0.3"
feed-rs = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"